Manifests/ingress/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: i-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: kubereval.api.localdev.me
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: api
            port: 
              number: 3000
