Manifests/ingress/ingress-pga.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: i-pga
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: kubereval.pga.localdev.me
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: pgadmin
            port: 
              number: 80
